# PinchFx

./: README.md  deploy.bat  dspflow.md  release.bat
sim/: .gitignore  PinchFxSim.sln  PinchFxSim.vcxproj  PinchFxSim.vcxproj.filters
sim/src/: PinchFxSimProcessor.h  SimIO.h  SimScope.h  config.h  main.cpp
sim/vsproj/: vsproj.sln  vsproj.vcxproj  vsproj.vcxproj.filters
vst3/: CMakeLists.txt  pinchfx.uidesc
vst3/src/: PinchFxController.cpp  PinchFxController.h  PinchFxDefaults.h  PinchFxIDs.h  PinchFxPartials.h  PinchFxPluginFactory.cpp  PinchFxProcessor.cpp  PinchFxProcessor.h
vst3/src/dsp/: MiniComb.h  OnePoleLP.h  Oversampler2x.h  PeakLimiter.h  PinchFxAlgorithm.h  PitchTrackerACF.h  PitchTrackerAlgo.h  TubeStage.h  TwoPoleControlledResonator.h  TwoPoleResonator.h
